--- a/Assessment/style.css
+++ b/Assessment/style.css
@@ -28,9 +28,21 @@ body {
     display: block;
   }
 }
+@media screen and (min-width: 0px) and (max-width: 480px) {
+  .navigation {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
 
 p {
   font-size: 120%;
+}
+@media screen and (min-width: 0px) and (max-width: 480px) {
+  p {
+    font-size: small;
+  }
 }
 
 a {
@@ -86,6 +98,7 @@ li {
 @media screen and (min-width: 0px) and (max-width: 1024px) {
   .image {
     width: 100%;
+    height: 100%;
   }
 }
 
