--- a/Assessment/style.scss
+++ b/Assessment/style.scss
@@ -45,10 +45,20 @@ body {
     @media (max-width: 480px) {
         @include mobile-layout;
     }
+
+    @include resolutions(0px, 480px) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
 }
 
 p {
     font-size: 120%;
+
+    @include resolutions(0px, 480px) {
+        font-size: small;
+    }
 }
 
 a {
@@ -107,6 +117,7 @@ li {
     height: 450px;
     @include resolutions(0px, 1024px) {
         width: 100%;
+        height: 100%;
     }
 }
 .p_curry {
