--- a/Assessment/style.css
+++ b/Assessment/style.css
@@ -20,15 +20,10 @@ body {
   .navigation {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: center;
   }
 }
 @media (max-width: 480px) {
-  .navigation {
-    display: block;
-  }
-}
-@media screen and (min-width: 0px) and (max-width: 480px) {
   .navigation {
     display: flex;
     justify-content: center;
